fixed user observable details

--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -4,6 +4,6 @@
     <app-fab-twita></app-fab-twita>
   </div>
   <div (click)="toggleBar($event, 'menubar')" align="right">
-    <nb-user size="medium" [name]="(user).displayName" [picture]="(user).photoURL"></nb-user>
+    <nb-user size="medium" [name]="user.displayName" [picture]="user.photoURL"></nb-user>
   </div>
 </div>
