--- a/src/app/posts/post-flag-delete/post-flag-delete.component.html
+++ b/src/app/posts/post-flag-delete/post-flag-delete.component.html
@@ -1,10 +1,10 @@
-<nb-actions *ngIf="user | async">
-  <nb-action *ngIf="(user | async).uid !== authorId">
+<nb-actions *ngIf="user">
+  <nb-action *ngIf="user.uid !== authorId">
     <button nbButton outline status="warning" size="tiny" (click)="onFlagClick()">
       <nb-icon icon="flag-outline" status="warning"></nb-icon>
     </button>
   </nb-action>
-  <nb-action *ngIf="(user | async).uid === authorId">
+  <nb-action *ngIf="user.uid === authorId">
     <button nbButton outline status="danger" size="tiny" (click)="onDeleteClick()">
       <nb-icon icon="trash-outline" status="danger"></nb-icon>
     </button>
