--- a/src/app/posts/post-actions/post-actions.component.html
+++ b/src/app/posts/post-actions/post-actions.component.html
@@ -3,21 +3,24 @@
     <nb-icon [icon]="actionState.favorite ? 'heart' : 'heart-outline'"
              [status]="actionState.favorite ? 'danger' : 'basic'"
              (click)="toggleFavorite($event)" class="clickable"></nb-icon>
+    {{post.meta.hearts || 0}}
   </nb-action>
   <nb-action>
     <nb-icon [icon]="actionState.down ? 'arrow-circle-down' : 'arrow-circle-down-outline'"
              [status]="actionState.down ? 'warning' : 'basic'"
              (click)="toggleDown($event)" class="clickable"></nb-icon>
+    {{post.meta.downs || 0}}
   </nb-action>
   <nb-action>
     <nb-icon [icon]="actionState.up ? 'arrow-circle-up' : 'arrow-circle-up-outline'"
              [status]="actionState.up ? 'success' : 'basic'"
              (click)="toggleUp($event)" class="clickable"></nb-icon>
+    {{post.meta.ups || 0}}
   </nb-action>
   <nb-action *ngIf="!isComment">
     <button nbButton status="basic" (click)="commentPost()" class="clickable">
       <nb-icon icon="message-square-outline" status="info"></nb-icon>
-      {{commentCount}}
+      {{this.post.meta.comments || 0}}
     </button>
   </nb-action>
 </nb-actions>
