--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -3,7 +3,7 @@
   <div>
     <app-fab-twita></app-fab-twita>
   </div>
-  <div (click)="toggleBar($event, 'menubar')" align="right">
+  <div (click)="toggleBar($event, 'menubar')" class="clickable" align="right">
     <nb-user size="medium" [name]="user.displayName" [picture]="user.photoURL"></nb-user>
   </div>
 </div>
