Added favicon trying to fix SEO

--- a/src/app/pages/single-post/single-post.component.html
+++ b/src/app/pages/single-post/single-post.component.html
@@ -1,4 +1,4 @@
-<div class="single-post" *ngIf="post != null; else postDeleted">
+<div class="single-post" *ngIf="post; else postDeleted">
   <section>
     <app-post-item [post]="post"></app-post-item>
   </section>
@@ -9,17 +9,6 @@
       </nb-list-item>
     </nb-list>
   </section>
-  <!--  <div class="reply-box">-->
-  <!--    <nb-accordion>-->
-  <!--      <nb-accordion-item #replyBox>-->
-  <!--        <nb-accordion-item-header>Click to reply</nb-accordion-item-header>-->
-  <!--        <nb-accordion-item-body>-->
-  <!--          <app-create-post [isComment]="true" [postId]="post.id"></app-create-post>-->
-  <!--        </nb-accordion-item-body>-->
-  <!--      </nb-accordion-item>-->
-  <!--    </nb-accordion>-->
-  <!--  </div>-->
-  <!--  <app-fab-reply (click)="toggleReplyBox()"></app-fab-reply>-->
 </div>
 <ng-template #postDeleted>
   <div class="single-post" align="center">
