--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <nb-layout-header fixed>
     <!-- Insert header here -->
     <a routerLink="/"><img height="60" src="/assets/icon/apple-icon-60x60.png" alt="TWITA"></a>
-    <app-header *ngIf="user | async"></app-header>
+    <app-header></app-header>
   </nb-layout-header>
 
   <nb-sidebar *ngIf="user | async" tag="favbar" state="expanded" left fixed>
