--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -1,9 +1,9 @@
-<div *ngIf="user" class="header-actions">
+<div class="header-actions">
   <div>&nbsp;</div>
   <div>
     <app-fab-twita></app-fab-twita>
   </div>
-  <div (click)="toggleBar($event, 'menubar')" class="clickable" align="right">
+  <div *ngIf="user" (click)="toggleBar($event, 'menubar')" class="clickable" align="right">
     <nb-user size="medium" [name]="user.displayName" [picture]="user.photoURL"></nb-user>
   </div>
 </div>
